--- a/templates/base.html
+++ b/templates/base.html
@@ -24,24 +24,29 @@
     />
     <!-- Dark MDB theme -->
     
-    <link rel="stylesheet" href="    {% static 'css/mdb.dark.min.css'%}"/>
+    <link rel="stylesheet" href="{% static 'css/mdb.dark.min.css'%}"/>
     <!-- Regular MDB theme -->
 
 
   </head>
   <body>
     <!-- Start your project here-->
-<div class="container ">
+  <!-- logo -->
+  
 
+  <div class="container ">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
     
     <div class="container-fluid">
+    <a class="navbar-brand" href='#'><img src="{% static 'images/Beanlogo-2.png' %}" width='120'></a>
     {% if user.is_authenticated %}
       <a class="navbar-brand" href="{% url 'movies:index'%}"><i class="fas fa-tv"></i>영화목록 /</a>
       <a class="navbar-brand" href="{% url 'community:index'%}"><i class="fas fa-users"></i>커뮤니티 /</a>
       <a class="navbar-brand" href="{% url 'movies:recommended'%}"><i class="fas fa-dice"></i> 랜덤추천 /</a>
       <a class="navbar-brand" href="{% url 'movies:recoreco'%}"><i class="fas fa-thumbs-up"></i>장르추천 /</a>
-      <a class="navbar-brand" href="{% url 'movies:blackbean' user %}"><i class="fas fa-thumbs-up"></i>검은콩추천</a>
+      <a class="navbar-brand" href="{% url 'movies:blackbean' user %}">
+        <img src="{% static 'images/blackbean.png' %}" width='25'>검은콩추천
+      </a>
       <ul class="navbar-nav ms-auto">
       <!-- Avatar -->
       <li class="nav-item dropdown">
@@ -93,9 +98,6 @@
         <li>
             <a class="dropdown-item" href="{% url 'accounts:login' %}"> 로그인</a>
           </li>
-          
-          
-      
         </ul>
       </li>
     </ul>    
@@ -104,8 +106,6 @@
       
     </nav>
 
-
-    
     {% block content %}
     {% endblock %}
   </div>
@@ -116,31 +116,17 @@
   <div class="container p-4">
     <!-- Section: Social media -->
     <section class="mb-4">
-      <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-facebook-f"></i
-      ></a>
-
-      <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-instagram"></i
-      ></a>
-
-    
-
       <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a class="btn btn-outline-light btn-floating m-1" href="https://lab.ssafy.com/flykimjiwun/pjt-final" role="button"
         ><i class="fab fa-github"></i
       ></a>
     </section>
     <!-- Section: Social media -->
 
-    
-
     <!-- Section: Text -->
-    <section class="mb-4">
+    <section class="mb-2">
       <p>
-        찜한 목록을 기반으로 영화를 추천해주는 사이트... 혹은 장르기반
+        찜한 목록을 기반으로 영화를 추천해주는 사이트
       </p>
     </section>
     <!-- Section: Text -->
@@ -152,7 +138,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2021 Copyright:
-    <a class="text-white" href="http://127.0.0.1:8000/">KIMJISOPEE.COM</a>
+    <a class="text-white" href="http://127.0.0.1:8000/">KIMJISOHEE.COM</a>
   </div>
   <!-- Copyright -->
 </footer>
