--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -3,11 +3,53 @@
 {% block content %}
   <div class="container my-5">
     <div class='row'>
-      <div class="box col-6">
+      <div class="box col-7">
         <h1><i class="fas fa-user-alt"></i> 프로필 - {{ person.username }}</h1>
-        <br>
+       <hr> 
         <h3><i class="fas fa-heart text-danger "></i> 찜한 영화들</h3>
-        <ul>
+        {% comment %}  {% endcomment %}
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      {% comment %} <th><h3><i class="fas fa-heart text-danger "></i>  찜한영화들</h3></th>
+<th></th> {% endcomment %}
+    </tr>
+  </thead>
+  <tbody>
+  {% if url_key|length%}
+              {% for movie in person.like_movies.all %}
+
+    <tr>
+      <td>              <a class='text-light' href='{% url 'movies:detail' movie.pk %}'>{{ movie.title }}</a>
+</td>
+	<td>{% if user == person %}
+            <form action="{% url 'movies:unlike' movie.pk %}" method="POST" class="d-inline">
+              {% csrf_token %}
+              <button class="btn btn-outline-light btn-sm">
+                <i class="fas fa-trash-alt fa-sm"></i>
+              </button>
+            </form>
+            {% endif %}</td>
+           
+    </tr>
+{% endfor %} 
+{% else %}
+<tbody>
+    
+    <tr>
+      <td>          찜 목록이 없어용!
+</td>
+	<td></td>
+    </tr>
+   
+  </tbody>
+        {% endif %} 
+</tbody>
+</table>
+{% comment %}  {% endcomment %}
+
+
+        {% comment %} <ul>
         {% if url_key|length%}
           {% for movie in person.like_movies.all %}
           <li>
@@ -28,9 +70,31 @@
         {% else %}
           <li>찜 목록이 없어용!</li>
         {% endif %}
-        </ul>
+        </ul> {% endcomment %}
+        {% comment %}  {% endcomment %}
+<h3><i class="fas fa-clipboard-list text-primary"></i> 작성한 게시글</h3>
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      {% comment %} <th>게시글 제목</th>
+<th>작성시간</th>  {% endcomment %}
+    </tr>
+  </thead>
+  <tbody>
+{% for review in person.review_set.all %}
 
-        <h3><i class="fas fa-clipboard-list text-primary"></i> 작성한 게시글</h3>
+    <tr>
+    <td>{{ review.title }}<a href="{% url 'community:detail' review.pk %}" class=' d-inline'>
+              <i class="fas fa-paperclip text-light"></i>
+            </a></td>
+      <td>{{review.created_at}} 작성글</td>
+	
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+        {% comment %} <h3><i class="fas fa-clipboard-list text-primary"></i> 작성한 게시글</h3>
         <ul>
           {% for review in person.review_set.all %}
           <li>
@@ -41,10 +105,48 @@
           </li>
           {% endfor %}
         </ul>
-        <br>
+        <br> {% endcomment %}
+
+
+
 
         <h3><i class="fas fa-star text-warning"></i>평점 목록</h3>
-        <ul>
+        {% comment %}  {% endcomment %}
+        <table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      {% comment %} <th>찜한영화들</th>
+<th></th> {% endcomment %}
+    </tr>
+  </thead>
+  <tbody>
+   {% for comment in person.movie_comments.all %}
+
+    <tr>
+      <td>{% for movie in movies %}
+              {% if movie.id == comment.movie_id %}
+                <div class='d-inline'>
+                  <a class='text-light' href='{% url 'movies:detail' movie.pk %}'>{{ movie.title }}</a>
+                </div>
+              {% endif %}
+            {% endfor %}</td>
+	<td><div class='d-inline-block text-warning'>
+              {% if comment.rank == 1 %}★
+              {% elif comment.rank == 2 %}★★
+              {% elif comment.rank == 3 %}★★★
+              {% elif comment.rank == 4 %}★★★★
+              {% else %}★★★★★
+              {% endif %}
+            </div></td>
+            <td>{{ comment.content }}
+            </td>
+    </tr>
+
+    {% endfor %}
+  </tbody>
+</table>
+{% comment %}  {% endcomment %}
+        {% comment %} <ul>
           {% for comment in person.movie_comments.all %}
           <li>
             {% for movie in movies %}
@@ -64,14 +166,50 @@
             </div>
             {{ comment.content }}<br>
           </li>
-          {% endfor %}
+          {% endfor %} {% endcomment %}
       </div>
 
-      <div class="box col-6"> 
-        <br>
+      <div class="box col-5"> 
+      
+        
         <div class='container'>
           {% if url_key|length %}
-          <div class="row bg-dark p-2">
+{% comment %}  {% endcomment %}
+          <div class="card border-light mb-3">
+      <div class="card-header">
+        <div class='fs-5'><i class="far fa-check-square text-secondary"></i> 오늘의 영화 - 
+        <h5 class="card-title d-inline">{{result.title}}</h5>
+        <a href="{% url 'movies:detail2' result.id %}" class='d-inline'>
+                <i class="fas fa-info-circle fa-lg text-light"></i>
+              </a>
+</div>
+            <div class='fw-light col-12' style='color:gray'> ! 찜 목록을 기반으로 추천하는 영화입니당 !</div>
+      </div>
+      <div class="card-body">
+        <div
+          class="bg-image hover-overlay ripple"
+          data-mdb-ripple-color="light"
+        >
+          <img
+            src="https://image.tmdb.org/t/p/w500/{{result.poster_path}}"
+            class="img-fluid"
+          />
+          <a href="{% url 'movies:detail2' result.id %}">
+            <div
+              class="mask"
+              style="background-color: rgba(251, 251, 251, 0.15)"
+            ></div>
+          </a>
+              <div>
+              
+              <p class="card-text">{{result.overview|slice:":70"}}...</p>
+              </div>
+        </div>
+      </div>
+    </div>
+  {% comment %}  {% endcomment %}
+
+          {% comment %} <div class="row bg-dark p-2">
             <div class='fs-5'><i class="far fa-check-square text-secondary"></i> 오늘의 영화</div>
             <div class='fw-light col-12' style='color:gray'> ! 찜 목록을 기반으로 추천하는 영화입니당 !</div>
             <div  class="col-6 m-2"><img src="https://image.tmdb.org/t/p/w500/{{result.poster_path}}" class='w-100' alt="No Poster"></div>
@@ -82,7 +220,7 @@
               </a>
               <p class="card-text">{{result.overview|slice:":70"}}...</p>
             </div>
-          </div>
+          </div> {% endcomment %}
           {% else %}
           찜 목록이 없어서 추천할 수 없어용
           {% endif %}
