--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -45,14 +46,14 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
     
     <div class="container-fluid">
-    <a class="navbar-brand" href='{% url 'movies:index'%}'><img src="http://flykimjiwon.dothome.co.kr/static/images/Beanlogo-2.png" width='120'></a>
+    <a class="navbar-brand" href='{% url 'movies:index'%}'><img src="{% static 'images/blackbean45.png' %}" width='120'></a>
     {% if user.is_authenticated %}
       <a class="navbar-brand" href="{% url 'movies:index'%}"><i class="fas fa-tv"></i>영화목록 /</a>
       <a class="navbar-brand" href="{% url 'community:index'%}"><i class="fas fa-users"></i>커뮤니티 /</a>
       <a class="navbar-brand" href="{% url 'movies:recommended'%}"><i class="fas fa-dice"></i> 랜덤추천 /</a>
       <a class="navbar-brand" href="{% url 'movies:recoreco'%}"><i class="fas fa-thumbs-up"></i>장르추천 /</a>
       <a class="navbar-brand" href="{% url 'movies:blackbean' user %}">
-        <img src="http://flykimjiwon.dothome.co.kr/static/images/blackbean.png" width='25'>검은콩추천
+        <img src="{% static 'images/bbb.png' %}" width='25'>검은콩추천
       </a>
       <ul class="navbar-nav ms-auto">
       <!-- Avatar -->
