--- a/movies/templates/movies/blackbean.html
+++ b/movies/templates/movies/blackbean.html
@@ -4,7 +4,7 @@
 <br>
 
 
-<h1><img src="http://flykimjiwon.dothome.co.kr/static/images/blackbean.png" width='50'> 검은콩추천</h1>
+<h1><img src="{% static 'images/bbb.png' %}" width='50'> 검은콩추천</h1>
 <div class='fs-5' style='color:gray'>찜목록을 기반으로 검은콩이 {{ results |length}} 가지의 영화를 추천드려요</div>
 <br>
 
